only exploding menu left

--- a/PR/index.html
+++ b/PR/index.html
@@ -25,10 +25,11 @@
                 <span class="header-top opening-menu">
                     <nav>
                         <ul>
-                            <li><a class="button" href="index.html">Home</a></li>
-                            <li><a class="button" href="multifaceted.html">News</a></li>
-                            <li><a class="button" href="web-design.html">Contact</a></li>
-                            <li class="clearfix"><a class="button" href="#about">About</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="multifaceted.html">News</a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="web-design.html">Blog</a></li>
+                            <li><a class="clearfix" href="#">Contact</a></li>
                         </ul>
                     </nav>
                 </span>
@@ -38,8 +39,9 @@
                     <ul class="menu">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="multifaceted.html">News</a></li>
-                        <li><a href="web-design.html">Contact</a></li>
-                        <li><a href="#dont">About</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="web-design.html">Blog</a></li>
+                        <li><a class="clearfix" href="#">Contact</a></li>
                     </ul>
                 </span>
             </div>
@@ -129,7 +131,7 @@
                         <img class="float-right" src="images/blog_2.jpg" alt="image of a person running">
                         <div>
                             <h4 class="red-dashed">22 inspiring web design trends for 2022</h4>
-                            <p>We’re a bit biased here but we’re still thankful for this comprehensive look at upcoming web design trends! This article covers a variety of design styles that ... <span class="red-dashed">Read more...</span> </p>
+                            <p>We’re a bit biased here but we’re still thankful for this comprehensive look at upcoming web design trends! This article covers a variety of design styles that ... <a href="#"><span class="red-dashed">Read more...</span></a> </p>
                         </div>
                     </div>
                     <hr>
@@ -137,7 +139,7 @@
                         <img class="float-left" src="images/blog_3.jpg" alt="image of a person with the sun at the end" class="float-left">
                         <div>
                             <h4 class="red-dashed">Break the Internet: The Rising Popularity of Glitch Art</h4>
-                            <p >Author Ben Barnhart breaks down the defining characteristics of glitch art, sharing examples of elements like pixelation, light leaks, and color degradation. <span class="red-dashed">Read more...</span> </p>
+                            <p >Author Ben Barnhart breaks down the defining characteristics of glitch art, sharing examples of elements like pixelation, light leaks, and color degradation. <a href="#"><span class="red-dashed">Read more...</span></a> </p>
                         </div>
                     </div>
                 </div>
