--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -9,10 +9,6 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/mobile/mobile-common.css">
     <link rel="stylesheet" href="css/mobile/mobile-web-design.css">
-
-
-
-    <title>Document</title>
 </head>
 <body>
     <header>
@@ -21,26 +17,28 @@
             <span class="header-top">
                 <img src="images/favicon.ico" alt="web icon">
             </span>
-            <span class="header-top opening-menu">
+            <div class="header-top opening-menu">
                 <nav>
                     <ul>
-                        <li><a class="index.html" href="#home">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="multifaceted.html">News</a></li>
-                        <li><a href="web-design.html">Contact</a></li>
-                        <li class="clearfix"><a href="#about">About</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="web-design.html">Blog</a></li>
+                        <li><a class="clearfix" href="#">Contact</a></li>
                     </ul>
                 </nav>
-            </span>
-            <span class="exploding-menu">
-                <input type="checkbox" class="menu-btn" id="menu-btn" />
+            </div>
+            <div class="exploding-menu">
+                <input type="checkbox" class="menu-btn" id="menu-btn">
                 <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="multifaceted.html">News</a></li>
-                    <li><a href="web-design.html">Contact</a></li>
-                    <li><a href="#dont">About</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="web-design.html">Blog</a></li>
+                    <li><a class="clearfix" href="#">Contact</a></li>
                 </ul>
-            </span>
+            </div>
         </div>
         <div class="header-image secondary-image-header">
             <div class="anika-container">
@@ -139,7 +137,7 @@
                                     <span>Name</span>
                                     <strong><span class="required">*</span></strong>
                                 </label>
-                                <input type="text" id="comment-name" name="name" required />
+                                <input type="text" id="comment-name" name="name" required>
                             </div>
                                 
 
@@ -148,14 +146,14 @@
                                     <span>Mail</span>
                                     <strong><span class="required">*</span></strong>
                                 </label>
-                                <input type="email" id="comment-mail" name="mail" required />
+                                <input type="email" id="comment-mail" name="mail" required>
                             </div>
 
                             <div>
-                                <label for="comment-website">
+                                <label for="website">
                                     <span>Website</span>
                                 </label>
-                                <input type="text" id="website" name="comment-website" required />
+                                <input type="text" id="website" name="comment-website" required>
                             </div>
 
                             <div>
@@ -178,7 +176,7 @@
                                     <span>Your image</span>
                                     <strong><span class="required">*</span></strong>
                                 </label>
-                                <input type="file" id="your-image" name="your-image" required />
+                                <input type="file" id="your-image" name="your-image" required>
                             </div>
     
                             <div>
