--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -22,10 +22,11 @@
             <span class="header-top opening-menu">
                 <nav>
                     <ul>
-                        <li><a class="index.html" href="#home">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="multifaceted.html">News</a></li>
-                        <li><a href="web-design.html">Contact</a></li>
-                        <li class="clearfix"><a href="#about">About</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="web-design.html">Blog</a></li>
+                        <li><a class="clearfix" href="#">Contact</a></li>
                     </ul>
                 </nav>
             </span>
@@ -35,8 +36,9 @@
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="multifaceted.html">News</a></li>
-                    <li><a href="web-design.html">Contact</a></li>
-                    <li><a href="#dont">About</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="web-design.html">Blog</a></li>
+                    <li><a class="clearfix" href="#">Contact</a></li>
                 </ul>
             </span>
         </div>
