--- a/PR/index.html
+++ b/PR/index.html
@@ -37,11 +37,11 @@
                     <input type="checkbox" class="menu-btn" id="menu-btn" />
                     <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
                     <ul class="menu">
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="multifaceted.html">News</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="web-design.html">Blog</a></li>
-                        <li><a class="clearfix" href="#">Contact</a></li>
+                        <li><a class="btn btn--doar" href="index.html">Home</a></li>
+                        <li><a class="btn btn--doar" href="multifaceted.html">News</a></li>
+                        <li><a class="btn btn--doar dollar" href="#">Pricing</a></li>
+                        <li><a class="btn btn--doar" href="web-design.html">Blog</a></li>
+                        <li><a class="btn btn--doar" class="clearfix" href="#">Contact</a></li>
                     </ul>
                 </span>
             </div>
