--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/multifaceted.css">
     <link rel="stylesheet" href="css/mobile/mobile-common.css">
     <link rel="stylesheet" href="css/mobile/mobile-multifaceted.css">
+    <link rel="stylesheet" href="css/utilities/footer-button.css">
+    <link rel="stylesheet" href="css/utilities/button-doar.css">
     <title>Document</title>
 </head>
 <body>
@@ -22,11 +24,11 @@
             <span class="header-top opening-menu">
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="multifaceted.html">News</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="web-design.html">Blog</a></li>
-                        <li><a class="clearfix" href="#">Contact</a></li>
+                        <li><a class="btn btn--doar" href="index.html">Home</a></li>
+                        <li><a class="btn btn--doar" href="multifaceted.html">News</a></li>
+                        <li><a class="btn btn--doar dollar" href="#">Pricing</a></li>
+                        <li><a class="btn btn--doar" href="web-design.html">Blog</a></li>
+                        <li><a class="btn btn--doar" class="clearfix" href="#">Contact</a></li>
                     </ul>
                 </nav>
             </span>
