--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/mobile/mobile-common.css">
     <link rel="stylesheet" href="css/mobile/mobile-web-design.css">
+    <link rel="stylesheet" href="css/utilities/footer-button.css">
+    <link rel="stylesheet" href="css/utilities/button-doar.css">
 </head>
 <body>
     <header>
@@ -20,11 +22,11 @@
             <div class="header-top opening-menu">
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="multifaceted.html">News</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="web-design.html">Blog</a></li>
-                        <li><a class="clearfix" href="#">Contact</a></li>
+                        <li><a class="btn btn--doar" href="index.html">Home</a></li>
+                        <li><a class="btn btn--doar" href="multifaceted.html">News</a></li>
+                        <li><a class="btn btn--doar dollar" href="#">Pricing</a></li>
+                        <li><a class="btn btn--doar" href="web-design.html">Blog</a></li>
+                        <li><a class="btn btn--doar" class="clearfix" href="#">Contact</a></li>
                     </ul>
                 </nav>
             </div>
