--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -12,28 +12,27 @@
     <link rel="stylesheet" href="css/mobile/mobile-multifaceted.css">
     <link rel="stylesheet" href="css/utilities/footer-button.css">
     <link rel="stylesheet" href="css/utilities/button-doar.css">
-    <title>Document</title>
 </head>
 <body>
     <header>
 
         <div class="flex-header">
-            <span class="header-top">
+            <div class="header-top">
                 <img src="images/favicon.ico" alt="web icon">
-            </span>
-            <span class="header-top opening-menu">
+            </div>
+            <div class="header-top opening-menu">
                 <nav>
                     <ul>
                         <li><a class="btn btn--doar" href="index.html">Home</a></li>
-                        <li><a class="btn btn--doar" href="multifaceted.html">News</a></li>
+                        <li><a class="btn btn--doar news-button" href="multifaceted.html">News</a></li>
                         <li><a class="btn btn--doar dollar" href="#">Pricing</a></li>
-                        <li><a class="btn btn--doar" href="web-design.html">Blog</a></li>
-                        <li><a class="btn btn--doar" class="clearfix" href="#">Contact</a></li>
+                        <li><a class="btn btn--doar blog-button" href="web-design.html">Blog</a></li>
+                        <li><a class="btn btn--doar contact-button clearfix" href="#">Contact</a></li>
                     </ul>
                 </nav>
-            </span>
-            <span class="exploding-menu">
-                <input type="checkbox" class="menu-btn" id="menu-btn" />
+            </div>
+            <div class="exploding-menu">
+                <input type="checkbox" class="menu-btn" id="menu-btn">
                 <label for="menu-btn" class="menu-icon"><span class="nav-icon"></span></label>
                 <ul class="menu">
                     <li><a href="index.html">Home</a></li>
@@ -42,7 +41,7 @@
                     <li><a href="web-design.html">Blog</a></li>
                     <li><a class="clearfix" href="#">Contact</a></li>
                 </ul>
-            </span>
+            </div>
         </div>
         <div class="header-image secondary-image-header">
             <div class="anika-container">
@@ -80,7 +79,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">Principles</td>
+                                <th scope="row">Principles</th>
                                 <th scope="row" class="responsive-th"> Design</th>
                                 <td>Good design is essential for user experience. It should be intuitive and visually appealing.</td>
                                 <th scope="row" class="responsive-th"> Light</th>
@@ -89,7 +88,7 @@
                                 <td>Colors can convey emotions and have psychological effects on viewers.</td>
                             </tr>
                             <tr class="light-blue-row">
-                                <th scope="row">Elements</td>
+                                <th scope="row">Elements</th>
                                     <th scope="row" class="responsive-th"> Design</th>
                                 <td>Design principles guide the creation of functional and aesthetically pleasing products.</td>
                                 <th scope="row" class="responsive-th"> Light</th>
@@ -98,7 +97,7 @@
                                 <td>Color selection can evoke emotions and set the tone for a design project.</td>
                             </tr>
                             <tr>
-                                <th scope="row">Theory</td>
+                                <th scope="row">Theory</th>
                                     <th scope="row" class="responsive-th"> Design</th>
                                 <td>Design thinking involves empathy, defining the problem, ideation, prototyping, and testing.</td>
                                 <th scope="row" class="responsive-th"> Light</th>
@@ -107,7 +106,7 @@
                                 <td>Color contrast is used for emphasis, guiding the viewer's attention.</td>
                             </tr>
                             <tr class="light-blue-row">
-                                <th scope="row">Applications</td>
+                                <th scope="row">Applications</th>
                                     <th scope="row" class="responsive-th"> Design</th>
                                 <td>User-centered design ensures that products meet the needs and preferences of users.</td>
                                 <th scope="row" class="responsive-th"> Light</th>
@@ -116,7 +115,7 @@
                                 <td>Color harmonies like complementary and analogous colors create visual interest.</td>
                             </tr>
                             <tr>
-                                <th scope="row">Psychology</td>
+                                <th scope="row">Psychology</th>
                                     <th scope="row" class="responsive-th"> Design</th>
                                 <td>Designers often collaborate with clients to refine the design concept and vision.</td>
                                 <th scope="row" class="responsive-th"> Light</th>
