--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -16,17 +16,17 @@
     <header>
 
         <div class="flex-header">
-            <span class="header-top">
+            <div class="header-top">
                 <img src="images/favicon.ico" alt="web icon">
-            </span>
+            </div>
             <div class="header-top opening-menu">
                 <nav>
                     <ul>
                         <li><a class="btn btn--doar" href="index.html">Home</a></li>
-                        <li><a class="btn btn--doar" href="multifaceted.html">News</a></li>
+                        <li><a class="btn btn--doar news-button" href="multifaceted.html">News</a></li>
                         <li><a class="btn btn--doar dollar" href="#">Pricing</a></li>
-                        <li><a class="btn btn--doar" href="web-design.html">Blog</a></li>
-                        <li><a class="btn btn--doar" class="clearfix" href="#">Contact</a></li>
+                        <li><a class="btn btn--doar blog-button" href="web-design.html">Blog</a></li>
+                        <li><a class="btn btn--doar contact-button clearfix" href="#">Contact</a></li>
                     </ul>
                 </nav>
             </div>
