--- a/PR/index.html
+++ b/PR/index.html
@@ -16,6 +16,9 @@
 
 <body>
         <header>
+            <a href="#main" class="skip">Skip to main content</a>
+            <a href="#footer" class="skip">Skip to footer</a>
+            <a href="#about-me" class="skip">Skip to information about myself</a>
 
             <div class="flex-header">
                 <div class="header-top">
@@ -53,7 +56,7 @@
         </header>
 
 
-        <main>
+        <main id="main" tabindex="-3">
             <section id="experiences">
                 <div class="container">
                         <h2  class="italic">
@@ -159,7 +162,7 @@
             </section>
 
 
-            <section id="about-me">
+            <section id="about-me" tabindex="-1">
                 <div class="container">
                     <h2 style="display: inline;">ABOUT ME:</h2>
                     <h3 style="display: inline;"> CRAFTING VISUAL EXPERIENCES</h3>
@@ -219,7 +222,7 @@
         </main>
 
 
-        <footer>
+        <footer id="footer" tabindex="-2">
             <div class="container">
                 <div class="footer-flex-row" style="justify-content: center;">
                     <div class="footer-flex-column">
