--- a/PR/multifaceted.html
+++ b/PR/multifaceted.html
@@ -15,7 +15,8 @@
 </head>
 <body>
     <header>
-
+        <a href="#main" class="skip">Skip to main content</a>
+        <a href="#footer" class="skip">Skip to footer</a>
         <div class="flex-header">
             <div class="header-top">
                 <img src="images/favicon.ico" alt="web icon">
@@ -53,7 +54,7 @@
 
 
 
-        <main>
+        <main id="main" tabindex="-2">
             <section id="multifaceted-aspects">    
                 <div class="container">
                     <h2>MULTIFACETED ASPECTS OF DESIGN. LIGHT. AND COLOR</h2>
@@ -135,7 +136,7 @@
         </main>
 
 
-        <footer>
+        <footer id="footer" tabindex="-1">
             <div class="container">
                 <div class="footer-flex-row" style="justify-content: center;">
                     <div class="footer-flex-column">
