--- a/PR/web-design.html
+++ b/PR/web-design.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-
+        <a href="#main" class="skip">Skip to main content</a>
         <div class="flex-header">
             <div class="header-top">
                 <img src="images/favicon.ico" alt="web icon">
@@ -52,7 +52,7 @@
 
 
 
-        <main>
+    <main id="main" tabindex="-1">
             <div class="container clearfix">
 
                 
@@ -236,7 +236,7 @@
         </main>
 
 
-        <footer>
+        <footer id="footer" tabindex="-1">
             <div class="container">
                 <div class="footer-flex-row" style="justify-content: center;">
                     <div class="footer-flex-column">
