minor changes to header

--- a/PR/index.html
+++ b/PR/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="header-top opening-menu">
                     <nav>
-                        <ul>
+                       git <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="multifaceted.html">News</a></li>
                             <li><a href="#">Pricing</a></li>
@@ -49,8 +49,8 @@
             </div>
             <div class="header-image">
                 <div class="anika-container-camera">
-                    <h1 class="anika-text weird italic">Adit Sanika Namrata</h1>
-                    <div>My work as a designer</div>
+                    <h1 class="anika-text weird italic">Adit Sanika Namrata
+                    <div style="font-family: 'Nunito Sans', 'sans-serif'; font-style: normal;">My work as a designer</div></h1>
                 </div>
             </div>
         </header>
