minor changes for accesibility

--- a/PR/index.html
+++ b/PR/index.html
@@ -122,7 +122,7 @@
                     <div class="float-blog clearfix">
                         <img src="images/blog_1.jpg" alt="image of four people jumping in the sunset" class="float-left">
                         <div>
-                            <h4 class="red-dashed">Web Design: Shaping the Digital Experience</h4>
+                            <h4 class="red-dashed" style="text-decoration: none;">Web Design: Shaping the Digital Experience</h4>
                             <p>Web design, or WD, is the art and science of creating engaging and user-friendly websites. In today's fast-paced digital world, a well-designed website is like a virtual storefront, attracting visitors and converting them into customers. <a href="web-design.html"><span class="red-dashed">Read more...</span></a></p>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                     <div class="float-blog clearfix">
                         <img class="float-right" src="images/blog_2.jpg" alt="image of a person running">
                         <div>
-                            <h4 class="red-dashed">22 inspiring web design trends for 2022</h4>
+                            <h4 class="red-dashed" style="text-decoration: none;">22 inspiring web design trends for 2022</h4>
                             <p>We’re a bit biased here but we’re still thankful for this comprehensive look at upcoming web design trends! This article covers a variety of design styles that ... <a href="#"><span class="red-dashed">Read more...</span></a> </p>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                     <div class="float-blog clearfix">
                         <img class="float-left" src="images/blog_3.jpg" alt="image of a person with the sun at the end" class="float-left">
                         <div>
-                            <h4 class="red-dashed">Break the Internet: The Rising Popularity of Glitch Art</h4>
+                            <h4 class="red-dashed" style="text-decoration: none;">Break the Internet: The Rising Popularity of Glitch Art</h4>
                             <p >Author Ben Barnhart breaks down the defining characteristics of glitch art, sharing examples of elements like pixelation, light leaks, and color degradation. <a href="#"><span class="red-dashed">Read more...</span></a> </p>
                         </div>
                     </div>
