--- a/PR/index.html
+++ b/PR/index.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="header-top opening-menu">
                     <nav>
-                       git <ul>
+                       <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="multifaceted.html">News</a></li>
                             <li><a href="#">Pricing</a></li>
@@ -50,7 +50,7 @@
             <div class="header-image">
                 <div class="anika-container-camera">
                     <h1 class="anika-text weird italic">Adit Sanika Namrata
-                    <div style="font-family: 'Nunito Sans', 'sans-serif'; font-style: normal;">My work as a designer</div></h1>
+                    <span style="font-family: 'Nunito Sans', 'sans-serif'; font-style: normal; display: block;">My work as a designer</span></h1>
                 </div>
             </div>
         </header>
@@ -125,7 +125,7 @@
                         <img src="images/blog_1.jpg" alt="image of four people jumping in the sunset" class="float-left">
                         <div>
                             <h4 class="red-dashed" style="text-decoration: none;">Web Design: Shaping the Digital Experience</h4>
-                            <p>Web design, or WD, is the art and science of creating engaging and user-friendly websites. In today's fast-paced digital world, a well-designed website is like a virtual storefront, attracting visitors and converting them into customers. <a href="web-design.html"><span class="red-dashed">Read more...</span></a></p>
+                            <p>Web design, or WD, is the art and science of creating engaging and user-friendly websites. In today's fast-paced digital world, a well-designed website is like a virtual storefront, attracting visitors and converting them into customers. <a href="web-design.html"><span class="red-dashed bold">Read more...</span></a></p>
                         </div>
                     </div>
                     <hr>
@@ -133,7 +133,7 @@
                         <img class="float-right" src="images/blog_2.jpg" alt="image of a person running">
                         <div>
                             <h4 class="red-dashed" style="text-decoration: none;">22 inspiring web design trends for 2022</h4>
-                            <p>We’re a bit biased here but we’re still thankful for this comprehensive look at upcoming web design trends! This article covers a variety of design styles that ... <a href="#"><span class="red-dashed">Read more...</span></a> </p>
+                            <p>We’re a bit biased here but we’re still thankful for this comprehensive look at upcoming web design trends! This article covers a variety of design styles that ... <a href="#"><span class="red-dashed bold">Read more...</span></a> </p>
                         </div>
                     </div>
                     <hr>
@@ -141,7 +141,7 @@
                         <img class="float-left" src="images/blog_3.jpg" alt="image of a person with the sun at the end">
                         <div>
                             <h4 class="red-dashed" style="text-decoration: none;">Break the Internet: The Rising Popularity of Glitch Art</h4>
-                            <p >Author Ben Barnhart breaks down the defining characteristics of glitch art, sharing examples of elements like pixelation, light leaks, and color degradation. <a href="#"><span class="red-dashed">Read more...</span></a> </p>
+                            <p >Author Ben Barnhart breaks down the defining characteristics of glitch art, sharing examples of elements like pixelation, light leaks, and color degradation. <a href="#"><span class="red-dashed bold">Read more...</span></a> </p>
                         </div>
                     </div>
                 </div>
